--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,13 @@ Source: cif2cell
 Section: science
 Priority: optional
 Maintainer: Synge Todo <wistaria@phys.s.u-tokyo.ac.jp>
-Build-Depends: debhelper (>= 9), dh-python, python3-all-dev, python3-setuptools, python3-pycifrw
+Build-Depends: debhelper (>= 9), dh-python, python-all-dev, python-setuptools, python-pycifrw
 Standards-Version: 3.9.3
 Homepage: https://sourceforge.net/projects/cif2cell/
 
-Package: python3-cif2cell
+Package: cif2cell
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}, ${python3:Depends}, python3-pycifrw
+Depends: ${misc:Depends}, ${shlibs:Depends}, ${python:Depends}, python-pycifrw
 Description: CIF2Cell - Generating cells for electronic structure calculations from CIF files
  CIF2Cell is a tool to generate the geometrical setup for various electronic
  structure codes from a CIF (Crystallographic Information Framework) file.
